; ModuleID = '/home/carl/AnghaBench/linux/block/extr_blk-rq-qos.c_rq_depth_scale_up.c'
source_filename = "/home/carl/AnghaBench/linux/block/extr_blk-rq-qos.c_rq_depth_scale_up.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rq_depth = type { i64, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @rq_depth_scale_up(%struct.rq_depth* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.rq_depth*, align 8
  store %struct.rq_depth* %0, %struct.rq_depth** %3, align 8
  %4 = load %struct.rq_depth*, %struct.rq_depth** %3, align 8
  %5 = getelementptr inbounds %struct.rq_depth, %struct.rq_depth* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %18

9:                                                ; preds = %1
  %10 = load %struct.rq_depth*, %struct.rq_depth** %3, align 8
  %11 = getelementptr inbounds %struct.rq_depth, %struct.rq_depth* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 8
  %13 = add nsw i32 %12, -1
  store i32 %13, i32* %11, align 8
  %14 = load %struct.rq_depth*, %struct.rq_depth** %3, align 8
  %15 = call i64 @rq_depth_calc_max_depth(%struct.rq_depth* %14)
  %16 = load %struct.rq_depth*, %struct.rq_depth** %3, align 8
  %17 = getelementptr inbounds %struct.rq_depth, %struct.rq_depth* %16, i32 0, i32 0
  store i64 %15, i64* %17, align 8
  store i32 1, i32* %2, align 4
  br label %18

18:                                               ; preds = %9, %8
  %19 = load i32, i32* %2, align 4
  ret i32 %19
}

declare dso_local i64 @rq_depth_calc_max_depth(%struct.rq_depth*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
